adapted readme to Java 8 and the removed designer (#3067)
Signed-off-by: Kai Kreuzer <kai@openhab.org>